cmake_minimum_required(VERSION 3.16)
project(rfb VERSION 1.0.0)

message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

FILE(GLOB SOURCES src/*.cc)
include_directories(include)
add_library(${PROJECT_NAME} SHARED ${SOURCES} src/${PROJECT_NAME}.cxx)
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
target_include_directories(${PROJECT_NAME} PRIVATE include/)
target_include_directories(${PROJECT_NAME} PRIVATE src/)
install(TARGETS ${PROJECT_NAME})
configure_file(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
install(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_PREFIX})

FILE(GLOB DEPS deps/*)
foreach(DEP ${DEPS})
  get_filename_component(DEP_LIB ${DEP} NAME)
  add_subdirectory(${DEP})
  include_directories(${DEP}/include)
  target_link_libraries(${PROJECT_NAME} PUBLIC ${DEP_LIB})
endforeach()

set(EXE ${PROJECT_NAME}_main)
add_executable(${EXE} main.cxx)
add_dependencies(${EXE} ${PROJECT_NAME})
target_link_libraries(${EXE} ${PROJECT_NAME})

install(TARGETS ${EXE} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/)

FILE(GLOB TESTS tests/*.cc)
foreach(test ${TESTS})
  string(REGEX REPLACE "\\.[^.]*$" "" test_mid ${test})
  string(REGEX REPLACE ".*tests/" "" test_exe ${test_mid})
  add_executable(${test_exe} ${test})
  add_dependencies(${test_exe} ${PROJECT_NAME})
  target_link_libraries(${test_exe} ${PROJECT_NAME})
  add_test(NAME ${test_exe} COMMAND ${test_exe})
endforeach()
